award alignment fix

--- a/wp-content/themes/case-unsolved/scss/home.scss
+++ b/wp-content/themes/case-unsolved/scss/home.scss
@@ -119,6 +119,10 @@
 
   &:not(:last-child) {
     margin-bottom: 2rem;
+
+    @media (min-width: $tablet) {
+      margin-bottom: 0;
+    }
   }
 
   &::before {
